--- a/DemoPrototype/MaintenancePage.xaml
+++ b/DemoPrototype/MaintenancePage.xaml
@@ -20,7 +20,7 @@
         <StackPanel Margin="5,0,0,0" Orientation="Vertical" Width="250" HorizontalAlignment="Left">
             <Border Margin="5,5,5,5" Grid.Row="0" Grid.Column="0" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5" >
                 <StackPanel  Margin="5,5,5,5" Orientation="Vertical">
-                    <TextBlock FontWeight="SemiBold" Text="Force valves"></TextBlock>
+                    <TextBlock FontWeight="SemiBold" Text="Valves"></TextBlock>
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Width="110"  VerticalAlignment="Center" Text="Hot feed valve"></TextBlock>
                         <ToggleSwitch Name="hotFeedValve" IsEnabled="False" Margin="5,0,0,0" HorizontalAlignment="Right"></ToggleSwitch>
@@ -42,7 +42,7 @@
 
             <Border Margin="5,5,5,5" Grid.Row="0" Grid.Column="0" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5" >
                 <StackPanel  Margin="5,5,5,5" Orientation="Vertical">
-                    <TextBlock FontWeight="SemiBold" Margin="0,0,0,0" Text="Force pumps"></TextBlock>
+                    <TextBlock FontWeight="SemiBold" Margin="0,0,0,0" Text="Pumps"></TextBlock>
                     <StackPanel Orientation="Horizontal">
                         <TextBlock  Width="110"  VerticalAlignment="Center" Text="Pump hot"></TextBlock>
                         <ToggleSwitch IsEnabled="False" Margin="5,0,0,0"  HorizontalAlignment="Right"></ToggleSwitch>
@@ -56,7 +56,7 @@
 
             <Border Margin="5,5,5,5" Grid.Row="0" Grid.Column="0" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5" >
                 <StackPanel  Margin="5,5,5,5" Orientation="Vertical">
-                    <TextBlock FontWeight="SemiBold" Margin="0,0,0,0" Text="Force heating cartridge"></TextBlock>
+                    <TextBlock FontWeight="SemiBold" Margin="0,0,0,0" Text="Heating cartridge"></TextBlock>
                     <StackPanel Orientation="Horizontal">
                         <TextBlock  Width="110"  VerticalAlignment="Center" Text="Disable heater"></TextBlock>
                         <ToggleSwitch IsEnabled="False" Margin="5,0,0,0"  HorizontalAlignment="Right"></ToggleSwitch>
@@ -69,7 +69,7 @@
                     </StackPanel>
 
                     <StackPanel Orientation="Horizontal">
-                        <Slider x:Name="mySlider" Width="110"  Minimum="0" Maximum="100"></Slider>
+                        <Slider IsEnabled="False" x:Name="mySlider" Width="110"  Minimum="0" Maximum="100"></Slider>
                         <ToggleSwitch IsEnabled="False" Margin="5,0,0,0"></ToggleSwitch>
                     </StackPanel>
                 </StackPanel>
@@ -77,7 +77,7 @@
 
             <Border Margin="5,5,5,5" Grid.Row="0" Grid.Column="0" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5" >
                 <StackPanel  Margin="5,5,5,5" Orientation="Vertical">
-                    <TextBlock FontWeight="SemiBold" Margin="0,0,0,0" Text="Force cooling cartridge"></TextBlock>
+                    <TextBlock FontWeight="SemiBold" Margin="0,0,0,0" Text="Cooling cartridge"></TextBlock>
                     <StackPanel Orientation="Horizontal">
                         <TextBlock  Width="110"  VerticalAlignment="Center" Text="Disable cooler"></TextBlock>
                         <ToggleSwitch IsEnabled="False" Margin="5,0,0,0"  HorizontalAlignment="Right"></ToggleSwitch>
@@ -90,7 +90,7 @@
                     </StackPanel>
 
                     <StackPanel Orientation="Horizontal">
-                        <Slider x:Name="myCoolSlider" Width="110" Minimum="0" Maximum="100"></Slider>
+                        <Slider IsEnabled="False"  x:Name="myCoolSlider" Width="110" Minimum="0" Maximum="100"></Slider>
                         <ToggleSwitch IsEnabled="False" Margin="5,0,0,0"></ToggleSwitch>
                     </StackPanel>
                 </StackPanel>
@@ -103,11 +103,11 @@
                     <TextBlock FontWeight="SemiBold" Text="Flow (lpm)"></TextBlock>
                     <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                         <TextBlock VerticalAlignment="Center" Width="140" Text="Coolant water"></TextBlock>
-                        <TextBox Name="coolantWater" IsEnabled="False" Text="55"></TextBox>
+                        <TextBox Name="coolantWater" IsEnabled="False" Text="-"></TextBox>
                     </StackPanel>
                     <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                         <TextBlock VerticalAlignment="Center" Width="140" Text="Heat transfer oil"></TextBlock>
-                        <TextBox Name="heatTransferOil" IsEnabled="False" Text="55"></TextBox>
+                        <TextBox Name="heatTransferOil" IsEnabled="False" Text="-"></TextBox>
                     </StackPanel>
 
                 </StackPanel>
@@ -125,11 +125,11 @@
 
                     <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                         <TextBlock VerticalAlignment="Center" Width="140" Text="Return valve"></TextBlock>
-                        <TextBox  Name ="retValveTemp" IsEnabled="False" Text="55" Width="30"></TextBox>
+                        <TextBox  Name ="retValveTemp" IsEnabled="False" Text="-" Width="30"></TextBox>
                     </StackPanel>
                     <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                         <TextBlock VerticalAlignment="Center" Width="140" Text="Bearing hot pump"></TextBlock>
-                        <TextBox  Name="bearingHotPumpTemp" IsEnabled="False" Text="55" Width="40"/>
+                        <TextBox  Name="bearingHotPumpTemp" IsEnabled="False" Text="-" Width="40"/>
                     </StackPanel>
 
                     <Border Margin="5,10,5,5" Grid.Row="0" Grid.Column="0" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5" >
@@ -137,11 +137,11 @@
                             <TextBlock  FontWeight="SemiBold" Text="Accumulator tanks"></TextBlock>
                             <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                                 <TextBlock VerticalAlignment="Center" Width="140" Text="Hot tank"></TextBlock>
-                                <TextBox Name="hotTankTemp" IsEnabled="False" Text="55" Width="30"></TextBox>
+                                <TextBox Name="hotTankTemp" IsEnabled="False" Text="-" Width="30"></TextBox>
                             </StackPanel>
                             <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                                 <TextBlock VerticalAlignment="Center" Width="140" Text="Cold tank"></TextBlock>
-                                <TextBox Name="coldTankTemp" IsEnabled="False" Text="55" Width="40"></TextBox>
+                                <TextBox Name="coldTankTemp" IsEnabled="False" Text="-" Width="40"></TextBox>
                             </StackPanel>
                         </StackPanel>
                     </Border>
@@ -151,15 +151,15 @@
                             <TextBlock FontWeight="SemiBold" Margin="0,0,0,0" Text="Buffer tank"></TextBlock>
                             <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                                 <TextBlock VerticalAlignment="Center" Width="140" Text="Hot side"></TextBlock>
-                                <TextBox Name="oilHotSideTemp" IsEnabled="False" Text="100"></TextBox>
+                                <TextBox Name="oilHotSideTemp" IsEnabled="False" Text="-"></TextBox>
                             </StackPanel>
                             <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                                 <TextBlock VerticalAlignment="Center" Width="140" Text="Middle"></TextBlock>
-                                <TextBox Name="oilMiddleTemp" IsEnabled="False" Text="100"></TextBox>
+                                <TextBox Name="oilMiddleTemp" IsEnabled="False" Text="-"></TextBox>
                             </StackPanel>
                             <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                                 <TextBlock VerticalAlignment="Center" Width="140" Text="Cold side"></TextBlock>
-                                <TextBox Name="oilColdSideTemp" IsEnabled="False" Text="100"></TextBox>
+                                <TextBox Name="oilColdSideTemp" IsEnabled="False" Text="-"></TextBox>
                             </StackPanel>
                         </StackPanel>
                     </Border>
@@ -168,11 +168,11 @@
                             <TextBlock FontWeight="SemiBold" Margin="0,0,0,0" Text="Heating cartridges"/>
                             <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                                 <TextBlock VerticalAlignment="Center" Width="140" Text="Oil inlet"/>
-                                <TextBox x:Name="oilInletTemp" IsEnabled="False" Text="100"/>
+                                <TextBox x:Name="oilInletTemp" IsEnabled="False" Text="-"/>
                             </StackPanel>
                             <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                                 <TextBlock VerticalAlignment="Center" Width="140" Text="Oil outlet"/>
-                                <TextBox x:Name="oilOutletTemp" IsEnabled="False" Text="100"/>
+                                <TextBox x:Name="oilOutletTemp" IsEnabled="False" Text="-"/>
                             </StackPanel>
                         </StackPanel>
                     </Border>
@@ -181,19 +181,19 @@
                             <TextBlock FontWeight="SemiBold" Margin="5,10,0,0" Text="Cooling cartridge"></TextBlock>
                             <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                                 <TextBlock VerticalAlignment="Center" Width="140" Text="Oil inlet"></TextBlock>
-                                <TextBox Name="oilExchangeInletTemp" IsEnabled="False" Text="100"></TextBox>
+                                <TextBox Name="oilExchangeInletTemp" IsEnabled="False" Text="-"></TextBox>
                             </StackPanel>
                             <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                                 <TextBlock VerticalAlignment="Center" Width="140" Text="Oil outlet"></TextBlock>
-                                <TextBox Name="oilExchangeOutletTemp" IsEnabled="False" Text="100"></TextBox>
+                                <TextBox Name="oilExchangeOutletTemp" IsEnabled="False" Text="-"></TextBox>
                             </StackPanel>
                             <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                                 <TextBlock VerticalAlignment="Center" Width="140" Text="Coolant water inlet"></TextBlock>
-                                <TextBox Name="coolantWaterExchangeInletTemp" IsEnabled="False" Text="100"></TextBox>
+                                <TextBox Name="coolantWaterExchangeInletTemp" IsEnabled="False" Text="-"></TextBox>
                             </StackPanel>
                             <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                                 <TextBlock VerticalAlignment="Center" Width="140" Text="Coolant water outlet"></TextBlock>
-                                <TextBox Name="coolantWaterExchangeOutletTemp" IsEnabled="False" Text="100"></TextBox>
+                                <TextBox Name="coolantWaterExchangeOutletTemp" IsEnabled="False" Text="-"></TextBox>
                             </StackPanel>
 
                         </StackPanel>
@@ -214,23 +214,23 @@
                     <TextBlock FontWeight="SemiBold" Text="Pressure (bar/psi)"></TextBlock>
                     <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                         <TextBlock VerticalAlignment="Center" Width="180" Text="Hot pump output"></TextBlock>
-                        <TextBox Name="hotPumpOutput" IsEnabled="False" Text="55"></TextBox>
+                        <TextBox Name="hotPumpOutput" IsEnabled="False" Text="-"></TextBox>
                     </StackPanel>
                     <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                         <TextBlock VerticalAlignment="Center" Width="180" Text="Cold pump output"></TextBlock>
-                        <TextBox Name="coldPumpOutput" IsEnabled="False" Text="55"></TextBox>
+                        <TextBox Name="coldPumpOutput" IsEnabled="False" Text="-"></TextBox>
                     </StackPanel>
                     <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                         <TextBlock VerticalAlignment="Center" Width="180" Text="Tool return"></TextBlock>
-                        <TextBox Name="toolReturn" IsEnabled="False" Text="55"></TextBox>
+                        <TextBox Name="toolReturn" IsEnabled="False" Text="-"></TextBox>
                     </StackPanel>
                     <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                         <TextBlock VerticalAlignment="Center" Width="180" Text="Particle filter"></TextBlock>
-                        <TextBox Name="particleFilter" IsEnabled="False" Text="55"></TextBox>
+                        <TextBox Name="particleFilter" IsEnabled="False" Text="-"></TextBox>
                     </StackPanel>
                     <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                         <TextBlock VerticalAlignment="Center" Width="180" Text="Pneumatics"></TextBlock>
-                        <TextBox Name="pneumatics" IsEnabled="False" Text="55"></TextBox>
+                        <TextBox Name="pneumatics" IsEnabled="False" Text="-"></TextBox>
                     </StackPanel>
 
                 </StackPanel>
